--- a/www/smg/nsmg/student_app/app.css
+++ b/www/smg/nsmg/student_app/app.css
@@ -38,7 +38,7 @@ small {
 	 height: 1px; 
 }
 
-.section {border-top: 0px; border-right: 2px solid #8f8f8f; border-left: 2px solid #8f8f8f; border-bottom: 0px;}
+.section {border-top: 0px; border-right: 2px solid #8f8f8f; border-left: 2px solid #8f8f8f; border-bottom: 0px; background:#ffffff;}
 
 .tableside {border-top: 0px; border-right: 0px; border-left: 0px; border-bottom: 0px; background: #DCDCDC;}
 
