--- a/www/smg/STB.css
+++ b/www/smg/STB.css
@@ -1,6 +1,6 @@
 body {
 	color: #8A9EA7;
-	background-image: url(exitsapp_images/Background.jpg);
+	background-image: url(exitsapp_image/Background.jpg);
 	background-repeat: repeat;
 	height: 888px;
 	width: 1191px;
@@ -18,7 +18,7 @@ body {
 	margin: 0px;
 	padding: 0px;
 	width: 700px;
-	background-image: url(exitsapp_images/loginTop.png);
+	background-image: url(exitsapp_image/loginTop.png);
 	background-repeat: no-repeat;
 	height: 55px;
 }
@@ -32,13 +32,13 @@ body {
 	margin-left: 200px;
 }
 .boxTile {
-	background-image: url(exitsapp_images/loginTile.png);
+	background-image: url(exitsapp_image/loginTile.png);
 	background-repeat: repeat-y;
 	height: 275px;
 	width: 700px;
 }
 .boxBot {
-	background-image: url(exitsapp_images/loginBot.png);
+	background-image: url(exitsapp_image/loginBot.png);
 	height: 52px;
 	width: 700px;
 	background-repeat: no-repeat;
@@ -56,7 +56,7 @@ body {
 	height: 225px;
 }
 .loginTop {
-	background-image: url(exitsapp_images/colorTop.png);
+	background-image: url(exitsapp_image/colorTop.png);
 	background-repeat: no-repeat;
 	width: 608px;
 	height: 20px;
@@ -67,7 +67,7 @@ body {
 	background-color: #002F44;
 	margin: 0px;
 	width: 607px;
-	background-image: url(exitsapp_images/logTilecolor.png);
+	background-image: url(exitsapp_image/logTilecolor.png);
 	background-repeat: repeat-y;
 	height: 110px;
 	padding-top: 0px;
@@ -82,11 +82,14 @@ body {
 	z-index: 10;
 	margin-top: 0px;
 	margin-left: 25px;
-	font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
-	font-size: 1.5em;
+
+}
+.clientcompanyname {
+       font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+       font-size: 1.5em;
 }
 .exitLogo {
-	background-image: url(exitsapp_images/EXITSlogo.png);
+	background-image: url(exitsapp_image/EXITSlogo.png);
 	background-repeat: no-repeat;
 	padding: 0px;
 	float: left;
@@ -115,7 +118,7 @@ body {
 	color: #999;
 }
 .button {
-	background-image: url(exitsapp_images/button.png);
+	background-image: url(exitsapp_image/button.png);
 	background-repeat: no-repeat;
 	height: 40px;
 	width: 228px;
