Allergy Clarification Form Changes

--- a/www/smg/STB.css
+++ b/www/smg/STB.css
@@ -1,6 +1,6 @@
 body {
 	color: #8A9EA7;
-	background-image: url(exitsapp_image/Background.jpg);
+	background-image: url(exitsapp_image/background.png);
 	background-repeat: repeat;
 	height: 888px;
 	width: 1191px;
