--- a/www/iseusa/blog/skins/iseusa/assets/styles/style.css
+++ b/www/iseusa/blog/skins/iseusa/assets/styles/style.css
@@ -59,7 +59,7 @@ h4 { font: italic 1.2em Georgia, "Times New Roman", Times, serif; color: #888; }
 
 /*---:[ core layout elements ]:---*/
 #container { width: 770px; margin: 15px auto 0 auto; }
-	#content_box { width: 770px; text-align: left; float: left; clear: both; }
+	#content_box { width: 770px; text-align: left; float: left; clear: both; padding-top:1.5em; }
 		#content { width: 500px; padding: 0 40px 0 0; float: left; }
 		#sidebar { width: 230px; float: left; }
 	#footer { width: 770px; padding: 1.2em 0 0 0; border-top: 2px solid #ccc; float: left; clear: both; }
@@ -71,7 +71,7 @@ h4 { font: italic 1.2em Georgia, "Times New Roman", Times, serif; color: #888; }
 
 	/* #masthead a { display: block; width: 770px; height: 100px; } */ /* uncomment this line if you use a graphic in the header - make sure the height of your header graphic is equal to the height declared in this line of code! */
 
-ul#nav { list-style: none; width: 750px; padding: 0 10px; background: url('../images/hr_dot_black.gif') repeat-x; border-bottom: 3px solid #000; float: left; clear: both; }
+ul#nav { list-style: none; width: 750px; padding: 0 10px; border-bottom: 1px solid #ccc; float: left; clear: both; } /* Removed by Marcus Melo - background: url('../images/hr_dot_black.gif') repeat-x; border-bottom: 3px solid #000; */ 
 
 	ul#nav li { padding: 0.85em 40px 0.7em 0; font: bold 1.4em Helvetica, Arial, sans-serif; text-transform: uppercase; float: left; }
 	
@@ -85,7 +85,7 @@ ul#nav { list-style: none; width: 750px; padding: 0 10px; background: url('../im
 			
 		ul#nav li.rss a { padding: 0 18px 0 0; background: url('../images/icon_rss.gif') 100% 50% no-repeat; }
 
-#header_img { position: relative; margin: 0 0 3.0em 0; border-bottom: 1px solid #000; float: left; clear: both; }
+#header_img { position: relative; margin: 0 0 0 0; border-bottom: 1px solid #000; float: left; clear: both; } /* Removed by Marcus Melo - margin: 0 0 3.0em 0; */
 	#header_img img { display: block; } /* this is really just an IE 6 and 7 hack in disguise */
 
 
