--- a/www/iseusa/css/ISEstyle.css
+++ b/www/iseusa/css/ISEstyle.css
@@ -9,7 +9,7 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 100%;
 	background-color: #B8D3E6;
-	background-image: url(http://www.iseusa.com/images/bodyBackground.gif);
+	background-image: url(/images/bodyBackground.gif);
 	background-repeat: repeat-x;
 }
 .oneColFixCtr #container {
@@ -63,7 +63,7 @@ body {
 	float: left;
 	width: 62px;
 	text-align: center;
-	background-image: url(http://www.iseusa.com/images/TopBarLinks/topBarLinks1.png);
+	background-image: url(/images/TopBarLinks/topBarLinks1.png);
 	background-repeat: no-repeat;
 	z-index: 2;
 	height: 40px;
@@ -77,7 +77,7 @@ body {
 	float: left;
 	width: 62px;
 	text-align: center;
-	background-image: url(http://www.iseusa.com/images/TopBarLinks/MOtopBoxLinks1.png);
+	background-image: url(/images/TopBarLinks/MOtopBoxLinks1.png);
 	background-repeat: no-repeat;
 	z-index: 2;
 	height: 40px;
@@ -91,7 +91,7 @@ body {
 	float: left;
 	width: 62px;
 	text-align: center;
-	background-image: url(http://www.iseusa.com/images/TopBarLinks/liveTopBarLinks1.png);
+	background-image: url(/images/TopBarLinks/liveTopBarLinks1.png);
 	background-repeat: no-repeat;
 	z-index: 2;
 	height: 40px;
@@ -105,7 +105,7 @@ body {
 	float: left;
 	width: 84px;
 	text-align: center;
-	background-image: url(http://www.iseusa.com/images/TopBarLinks/topBarLinks2.png);
+	background-image: url(/images/TopBarLinks/topBarLinks2.png);
 	background-repeat: no-repeat;
 	z-index: 2;
 	height: 40px;
@@ -119,7 +119,7 @@ body {
 	float: left;
 	width: 84px;
 	text-align: center;
-	background-image: url(http://www.iseusa.com/images/TopBarLinks/MOtopBoxLinks2.png);
+	background-image: url(/images/TopBarLinks/MOtopBoxLinks2.png);
 	background-repeat: no-repeat;
 	z-index: 2;
 	height: 40px;
@@ -133,7 +133,7 @@ body {
 	float: left;
 	width: 84px;
 	text-align: center;
-	background-image: url(http://www.iseusa.com/images/TopBarLinks/liveTopBarLinks2.png);
+	background-image: url(/images/TopBarLinks/liveTopBarLinks2.png);
 	background-repeat: no-repeat;
 	z-index: 2;
 	height: 40px;
@@ -147,7 +147,7 @@ body {
 	float: left;
 	width: 90px;
 	text-align: center;
-	background-image: url(http://www.iseusa.com/images/TopBarLinks/topBarLinks3.png);
+	background-image: url(/images/TopBarLinks/topBarLinks3.png);
 	background-repeat: no-repeat;
 	z-index: 2;
 	height: 40px;
@@ -161,7 +161,7 @@ body {
 	float: left;
 	width: 90px;
 	text-align: center;
-	background-image: url(http://www.iseusa.com/images/TopBarLinks/MOtopBoxLinks3.png);
+	background-image: url(/images/TopBarLinks/MOtopBoxLinks3.png);
 	background-repeat: no-repeat;
 	z-index: 2;
 	height: 40px;
@@ -175,7 +175,7 @@ body {
 	float: left;
 	width: 90px;
 	text-align: center;
-	background-image: url(http://www.iseusa.com/images/TopBarLinks/liveTopBarLinks3.png);
+	background-image: url(/images/TopBarLinks/liveTopBarLinks3.png);
 	background-repeat: no-repeat;
 	z-index: 2;
 	height: 40px;
@@ -189,7 +189,7 @@ body {
 	float: left;
 	width: 121px;
 	text-align: center;
-	background-image: url(http://www.iseusa.com/images/TopBarLinks/topBarLinks4.png);
+	background-image: url(/images/TopBarLinks/topBarLinks4.png);
 	background-repeat: no-repeat;
 	z-index: 2;
 	height: 40px;
@@ -203,7 +203,7 @@ body {
 	float: left;
 	width: 121px;
 	text-align: center;
-	background-image: url(http://www.iseusa.com/images/TopBarLinks/MOtopBoxLinks4.png);
+	background-image: url(/images/TopBarLinks/MOtopBoxLinks4.png);
 	background-repeat: no-repeat;
 	z-index: 2;
 	height: 40px;
@@ -217,7 +217,7 @@ body {
 	float: left;
 	width: 121px;
 	text-align: center;
-	background-image: url(http://www.iseusa.com/images/TopBarLinks/liveTopBarLinks4.png);
+	background-image: url(/images/TopBarLinks/liveTopBarLinks4.png);
 	background-repeat: no-repeat;
 	z-index: 2;
 	height: 40px;
@@ -231,7 +231,7 @@ body {
 	float: left;
 	width: 106px;
 	text-align: center;
-	background-image: url(http://www.iseusa.com/images/TopBarLinks/topBarLinks5.png);
+	background-image: url(/images/TopBarLinks/topBarLinks5.png);
 	background-repeat: no-repeat;
 	z-index: 2;
 	height: 40px;
@@ -245,7 +245,7 @@ body {
 	float: left;
 	width: 106px;
 	text-align: center;
-	background-image: url(http://www.iseusa.com/images/TopBarLinks/MOtopBoxLinks5.png);
+	background-image: url(/images/TopBarLinks/MOtopBoxLinks5.png);
 	background-repeat: no-repeat;
 	z-index: 2;
 	height: 40px;
@@ -259,7 +259,7 @@ body {
 	float: left;
 	width: 106px;
 	text-align: center;
-	background-image: url(http://www.iseusa.com/images/TopBarLinks/liveTopBarLinks5.png);
+	background-image: url(/images/TopBarLinks/liveTopBarLinks5.png);
 	background-repeat: no-repeat;
 	z-index: 2;
 	height: 40px;
@@ -271,7 +271,7 @@ body {
 
 /* logo box information */
 #logoBoxFixed {
-	background-image: url(http://www.iseusa.com/images/logobox.png);
+	background-image: url(/images/logobox.png);
 	background-repeat: no-repeat;
 	height: 160px;
 	width: 214px;
@@ -293,7 +293,7 @@ body {
 	float: left;
 	width: 131px;
 	text-align: center;
-	background-image: url(http://www.iseusa.com/images/topTabs/tabs_03.png);
+	background-image: url(/images/topTabs/tabs_03.png);
 	background-repeat: no-repeat;
 	z-index: 2;
 	height: 51px;
@@ -307,7 +307,7 @@ body {
 	float: left;
 	width: 131px;
 	text-align: center;
-	background-image: url(http://www.iseusa.com/images/topTabs/MOtabs_03.png);
+	background-image: url(/images/topTabs/MOtabs_03.png);
 	background-repeat: no-repeat;
 	z-index: 2;
 	height: 51px;
@@ -321,7 +321,7 @@ body {
 	float: left;
 	width: 131px;
 	text-align: center;
-	background-image: url(http://www.iseusa.com/images/topTabs/live_03.png);
+	background-image: url(/images/topTabs/live_03.png);
 	background-repeat: no-repeat;
 	z-index: 2;
 	height: 51px;
@@ -335,7 +335,7 @@ body {
 	float: left;
 	width: 115px;
 	text-align: center;
-	background-image: url(http://www.iseusa.com/images/topTabs/tabs_04.png);
+	background-image: url(/images/topTabs/tabs_04.png);
 	background-repeat: no-repeat;
 	z-index: 2;
 	height: 51px;
@@ -349,7 +349,7 @@ body {
 	float: left;
 	width: 115px;
 	text-align: center;
-	background-image: url(http://www.iseusa.com/images/topTabs/MOtabs_04.png);
+	background-image: url(/images/topTabs/MOtabs_04.png);
 	background-repeat: no-repeat;
 	z-index: 2;
 	height: 51px;
@@ -363,7 +363,7 @@ body {
 	float: left;
 	width: 115px;
 	text-align: center;
-	background-image: url(http://www.iseusa.com/images/images/topTabs/live_04.png);
+	background-image: url(/images/images/topTabs/live_04.png);
 	background-repeat: no-repeat;
 	z-index: 2;
 	height: 51px;
@@ -377,7 +377,7 @@ body {
 	float: left;
 	width: 100px;
 	text-align: center;
-	background-image: url(http://www.iseusa.com/images/topTabs/tabs_05.png);
+	background-image: url(/images/topTabs/tabs_05.png);
 	background-repeat: no-repeat;
 	z-index: 2;
 	height: 51px;
@@ -391,7 +391,7 @@ body {
 	float: left;
 	width: 100px;
 	text-align: center;
-	background-image: url(http://www.iseusa.com/images/topTabs/MOtabs_05.png);
+	background-image: url(/images/topTabs/MOtabs_05.png);
 	background-repeat: no-repeat;
 	z-index: 2;
 	height: 51px;
@@ -405,7 +405,7 @@ body {
 	float: left;
 	width: 100px;
 	text-align: center;
-	background-image: url(http://www.iseusa.com/images/topTabs/live_05.png);
+	background-image: url(/images/topTabs/live_05.png);
 	background-repeat: no-repeat;
 	z-index: 2;
 	height: 51px;
@@ -419,7 +419,7 @@ body {
 	float: left;
 	width: 100px;
 	text-align: center;
-	background-image: url(http://www.iseusa.com/images/topTabs/tabs_06.png);
+	background-image: url(/images/topTabs/tabs_06.png);
 	background-repeat: no-repeat;
 	z-index: 2;
 	height: 51px;
@@ -433,7 +433,7 @@ body {
 	float: left;
 	width: 100px;
 	text-align: center;
-	background-image: url(http://www.iseusa.com/images/topTabs/MOtabs_06.png);
+	background-image: url(/images/topTabs/MOtabs_06.png);
 	background-repeat: no-repeat;
 	z-index: 2;
 	height: 51px;
@@ -447,7 +447,7 @@ body {
 	float: left;
 	width: 100px;
 	text-align: center;
-	background-image: url(http://www.iseusa.com/images/images/topTabs/live_06.png);
+	background-image: url(/images/images/topTabs/live_06.png);
 	background-repeat: no-repeat;
 	z-index: 2;
 	height: 51px;
@@ -461,7 +461,7 @@ body {
 	float: left;
 	width: 85px;
 	text-align: center;
-	background-image: url(http://www.iseusa.com/images/topTabs/tabs_07.png);
+	background-image: url(/images/topTabs/tabs_07.png);
 	background-repeat: no-repeat;
 	z-index: 2;
 	height: 51px;
@@ -475,7 +475,7 @@ body {
 	float: left;
 	width: 85px;
 	text-align: center;
-	background-image: url(http://www.iseusa.com/images/topTabs/MOtabs_07.png);
+	background-image: url(/images/topTabs/MOtabs_07.png);
 	background-repeat: no-repeat;
 	z-index: 2;
 	height: 51px;
@@ -489,7 +489,7 @@ body {
 	float: left;
 	width: 85px;
 	text-align: center;
-	background-image: url(http://www.iseusa.com/images/topTabs/live_07.png);
+	background-image: url(/images/topTabs/live_07.png);
 	background-repeat: no-repeat;
 	z-index: 2;
 	height: 51px;
@@ -504,7 +504,7 @@ body {
 	float: left;
 	width: 80px;
 	text-align: center;
-	background-image: url(http://www.iseusa.com/images/topTabs/tabs_08.png);
+	background-image: url(/images/topTabs/tabs_08.png);
 	background-repeat: no-repeat;
 	z-index: 2;
 	height: 51px;
@@ -518,7 +518,7 @@ body {
 	float: left;
 	width: 80px;
 	text-align: center;
-	background-image: url(http://www.iseusa.com/images/topTabs/MOtabs_08.png);
+	background-image: url(/images/topTabs/MOtabs_08.png);
 	background-repeat: no-repeat;
 	z-index: 2;
 	height: 51px;
@@ -532,7 +532,7 @@ body {
 	float: left;
 	width: 80px;
 	text-align: center;
-	background-image: url(http://www.iseusa.com/images/topTabs/live_08.png);
+	background-image: url(/images/topTabs/live_08.png);
 	background-repeat: no-repeat;
 	z-index: 2;
 	height: 51px;
@@ -1138,7 +1138,7 @@ body {
 	margin-left: 35px;
 }
 #logoBox {
-	background-image: url(http://www.iseusa.com/images/logobox.png);
+	background-image: url(/images/logobox.png);
 	background-repeat: no-repeat;
 	height: 160px;
 	width: 200px;
