--- a/www/csb-usa/style.css
+++ b/www/csb-usa/style.css
@@ -20,8 +20,10 @@ body {
 	font-family: Verdana;
 	font-size: 10px;
 	font-style: normal;
-	color:#7286B6;
+	color:#6985AD;
 	text-align:center;
+	background-image: url(work_and_travel/images/bottom.png);
+	background-repeat: no-repeat;
 }
 .MenuItens {
 	font-family: Verdana;
@@ -65,4 +67,22 @@ a:hover {
 a:active {
 	text-decoration: none;
 	color: #039;
+}.banner {
+	height: 25px;
+	width: 500px;
+	z-index: 5;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 18px;
+	color: #FFF;
+	margin-top: 96px;
+	margin-left: 200px;
+	padding-top: 3px;
+	padding-left: 50px;
 }
+.bold {
+	font-weight: bold;
+}
+.footer {
+	background-image: url(images/bottom.png);
+	background-repeat: no-repeat;
+	}
