--- a/www/smg/nsmg/linked/css/student_profile.css
+++ b/www/smg/nsmg/linked/css/student_profile.css
@@ -2,12 +2,14 @@
 /* CSS Document */
 
 .profileTable {
+	width:800px;
 	border-left: 1px solid #999;
 	border-right: 1px solid #999;;
 	border-bottom: 1px solid #999;;
 	border-top: 1px solid #999;;
-	padding: 6px 6px 6px 12px;
+	padding: 6px 8px 6px 8px;
 	margin-bottom:10px;
+	background-color:#FFF;
 }
 
 .titleLeft {
@@ -22,4 +24,27 @@
 
 .titleRight {
 	vertical-align:top;
+}
+
+.profileTitleSection{
+	width:100%;
+	margin-bottom:5px;
+	text-transform: uppercase;
+	letter-spacing: 5px;	
+	background: #0854a1;
+	text-align:center;
+	color:#FFF;
+	font-size:12px;
+	font-weight:bold;
+	display:block;
+}
+
+.title {
+	color:#999;
+	padding:0px 3px 3px 0px;
+}
+
+.comments {
+	text-align:justify;
+	display:block;
 }
