--- a/www/iseusa/css/ISEstyle.css
+++ b/www/iseusa/css/ISEstyle.css
@@ -877,6 +877,8 @@ body {
 	padding: 0px;
 	height: 27px;
 	width: 746px;
+	display: block;
+	clear: both;
 }
 .p1 {
 	font-family: Arial, Helvetica, sans-serif;
@@ -1218,4 +1220,15 @@ body {
 
 #page-wrap{
 	padding: 10px;
+}
+#footer2 {
+	clear: both;
+	height: 20%;
+	margin: 0;
+	background-color: #000;
+	padding-top: 14;
+	padding-right: 0;
+	padding-bottom: 0;
+	padding-left: 0;
+	bottom: -15px;
 }
