--- a/www/granbyprep/linked/css/appSection.css
+++ b/www/granbyprep/linked/css/appSection.css
@@ -28,13 +28,23 @@ Page Header
 }
 
 .topLeft .mainLogo {
-	background-image:url(../../images/onlineApp/logoSmall.gif);
-	background-repeat:no-repeat;
 	width: 60px;
 	height:60px;
 	float:left;
-	margin:5px 0px 0px 10px;
 	display:block;
+	margin:5px 0px 0px 10px;
+	background-repeat:no-repeat;
+	background-image:url(../../images/onlineApp/logoSmall.gif);
+}
+
+.topLeft .printLogo {
+	width: 60px;
+	height:60px;
+	top:0px;
+	left:5px;
+	position:absolute;
+	background-image:url(../../images/onlineApp/logoSmall.gif);
+	background-repeat:no-repeat;
 }
 
 .topLeft a {
@@ -288,7 +298,7 @@ Online Application
 	background: url(../../images/onlineApp/cardAmex.gif) no-repeat; 
 }
 
-/* Discovery */
+/* Discover */
 .creditCardImageDiv .card4 {
 	width:180px;
 	height:120px; 
