--- a/www/granbyprep/linked/css/appSection.css
+++ b/www/granbyprep/linked/css/appSection.css
@@ -538,6 +538,14 @@ div.form-container-noBorder .checkMark {
 }
 
 /* Error messages */
+div.errorContainer { 
+	display: none; 
+	margin: 10px 0 10px 0; 
+	padding: 5px 10px; 
+	border: #FC6 1px solid; 
+	background-color: #FFC; 
+}
+
 div.errors { 
 	margin: 0 0 10px 0; 
 	padding: 5px 10px; 
@@ -545,19 +553,27 @@ div.errors {
 	background-color: #FFC; 
 }
 
-div.errors p { 
+div.errorContainer label,
+div.errors label { 
+	color:#000;
+}
+
+div.errors p,
+div.errorContainer p { 
 	margin: 0; 
 }
 
-div.errors p em { 
+div.errors p em,
+div.errorContainer p em { 
 	color: #C00; 
 	font-style: normal; 
 	font-weight: bold; 
 }
 
+
 /* Page Messages */
 div.pageMessages { 
-	margin: 0 0 10px 0; 
+	margin: 10px 0 10px 0; 
 	padding: 5px 10px; 
 	border: #0069aa 1px solid; 
 	display:none;
@@ -647,8 +663,10 @@ div.form-container-noBorder span.label {
 
 div.form-container label.error, 
 div.form-container span.error,
+div.form-container li.error,
 div.form-container-noBorder label.error,
-div.form-container-noBorder span.error { 
+div.form-container-noBorder span.error,
+div.form-container-noBorder li.error { 
 	color: #C00; 
 }
 
@@ -664,7 +682,9 @@ div.form-container-noBorder span.label em {
 }
 
 div.form-container input.error,
-div.form-container-noBorder input.error { 
+div.form-container select.error,
+div.form-container-noBorder input.error,
+div.form-container-noBorder select.error { 
 	border-color: #C00; 
 	background-color: #FEF; 
 }
