GranbyPrep - Front end changes by Jeimi.

--- a/www/granbyprep/css/granby.css
+++ b/www/granbyprep/css/granby.css
@@ -1,10 +1,3 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Granby Sports Offered</title>
-<style type="text/css">
-<!--
 body {
 	font: 100% Verdana, Arial, Helvetica, sans-serif;
 	background: #666666;
@@ -20,24 +13,32 @@ body {
 3. If font sizing is changed in differing amounts on each div instead of on the overall design (ie: #sidebar1 is given a 70% font size and #mainContent is given an 85% font size), this will proportionately change each of the divs overall size. You may want to adjust based on your final font sizing.
 */
 .oneColElsCtrHdr #container {
-	width: 829px;  /* this width will create a container that will fit in an 800px browser window if text is left at browser default font sizes */
+	width: 831px;  /* this width will create a container that will fit in an 800px browser window if text is left at browser default font sizes */
 	background: #FFFFFF; /* the auto margins (in conjunction with a width) center the page */
 	border: 1px solid #000000;
 	text-align: left; /* this overrides the text-align: center on the body element. */
-	margin-top: 0;
+	margin-top: 0px;
 	margin-right: auto;
 	margin-bottom: 0;
 	margin-left: auto;
 }
 .oneColElsCtrHdr #header {
-	background-color: #DDDDDD;
-	background-image: url(images/subHeader.png);
+	padding: 0;  /* this padding matches the left alignment of the elements in the divs that appear beneath it. If an image is used in the #header instead of text, you may want to remove the padding. */
+	background-color: #FFF;
+	background-image: url(../images/header.png);
 	background-repeat: no-repeat;
-	height: 190px;
-	width: 829px;
-	padding-top: 0;
+	height: 526px;
+	width: 831px;
+} 
+.oneColElsCtrHdr #headerBar {
+	background-color: #FFF;
+	background-image: url(../images/headerbar.png);
+	background-repeat: no-repeat;
+	height: 220px;
+	width: 831px;
+	padding-top: 0px;
 	padding-right: 0px;
-	padding-bottom: 0;
+	padding-bottom: 0px;
 	padding-left: 0px;
 } 
 .oneColElsCtrHdr #header h1 {
@@ -46,24 +47,23 @@ body {
 }
 .oneColElsCtrHdr #mainContent {
 	padding: 0 20px;
-	background-color: #FFFFFF;
-	background-image: url(images/gradient.png);
+	background-image: url(../images/gradient.png);
 	background-repeat: repeat-x;
 }
-#menu {
-	text-align: center;
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 14px;
-	font-weight: bold;
-	height: 25px;
-	padding-top: 8px;
+.oneColElsCtrHdr #mainIndex {
+	padding: 0;
+	background-color: #FFFFFF;
+	background-image: url(../images/mission.png);
+	background-repeat: no-repeat;
+	height: 131px;
+	width: 831px;
 }
 .oneColElsCtrHdr #footer {
 	background-color: #DDDDDD;
-	background-image: url(images/subfooter.png);
+	background-image: url(../images/subfooter.png);
 	background-repeat: no-repeat;
 	height: 45px;
-	width: 829px;
+	width: 831px;
 	padding-top: 0;
 	padding-right: 0px;
 	padding-bottom: 0;
@@ -80,8 +80,40 @@ body {
 	text-align: center;
 	font-weight: bold;
 }
+.oneColElsCtrHdr #footerIndex {
+	background-image: url(../images/footer.png);
+	background-repeat: no-repeat;
+	height: 78px;
+	width: 831px;
+	padding: 0;
+	background-color: #FFF;
+} 
+#menu {
+	text-align: center;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 14px;
+	font-weight: bold;
+	height: 35px;
+	margin-right: 5px;
+	margin-left: 5px;
+	margin-top: 0px;
+	margin-bottom: 0px;
+	padding-top: 5px;
+	padding-right: 0px;
+	padding-bottom: 0px;
+	padding-left: 0px;
+	border-top-width: medium;
+	border-bottom-width: medium;
+	border-top-style: solid;
+	border-bottom-style: solid;
+	border-top-color: #1269AA;
+	border-bottom-color: #1269AA;
+}
 a:link {
 	color: #000;
+	text-decoration: none;
+}
+a:visited {
 	text-decoration: none;
 }
 a:hover {
@@ -92,8 +124,11 @@ a:active {
 	color: #000;
 	text-decoration: none;
 }
-a:visited {
-	text-decoration: none;
+#click {
+	height: 150px;
+	width: 190px;
+	margin: 0px;
+	padding: 0px;
 }
 .photo {
 	float: right;
@@ -102,45 +137,41 @@ a:visited {
 	margin-right: 50px;
 	margin-top: 10px;
 }
-#click {
-	height: 150px;
-	width: 190px;
-	margin: 0px;
-	padding: 0px;
+.clearfix {
+	display: block;
+	clear: both;
+	height: 15px;
 }
--->
-</style></head>
-
-<body class="oneColElsCtrHdr">
-
-<div id="container">
-  <div id="header">
-    <div id="click">
-  <a href="index.cfm"><img src="images/click.png" width="190" height="149" border="0" /></a></div>
-  <!-- end #header --></div>
-  <div id="menu"> <a href="about.cfm"> About Granby</a>  &nbsp;|&nbsp;  <a href="courses.cfm">Courses Offered</a> &nbsp; | &nbsp; <a href="student.cfm">Student Life</a>  &nbsp;|&nbsp; <a href="school.cfm"> School Features</a>  &nbsp;| &nbsp; <a href="sports.cfm">Sports Offered </a> &nbsp;|&nbsp;  <a href="area.cfm">Area </a> </div>
-<div id="mainContent">
-  <div class="photo"><img src="images/sports.png"/></div>
-    <h2>Sports Offered</h2>
-<ul><li>basketball
-<li>softball
-<li>track
-<li>tennis
-<li>volleyball
-<li>golf
-<li>soccer
-<li>badminton
-<li>martial arts</li>
-<li>cross country running</li>
-<li>skiing/snowboarding</li>
-</ul>
-    <p></p>
-    <p></p>
-  <!-- end #mainContent --></div>
-  <div id="footer">
-    <p>Granby Preparatory Academy &nbsp; |&nbsp;  (800) 766-4656 or (631) 893-4540 &nbsp; |  &nbsp;66 School Street, Granby , MA 01033<br />
-    For more information contact us at info@granbyprep.com</p>
-  <!-- end #footer --></div>
-<!-- end #container --></div>
-</body>
-</html>
+.info {
+	float: right;
+	height: 100px;
+	width: 100px;
+	margin-top: 23px;
+	z-index: 25;
+}
+.events {
+	font-family: Arial, Helvetica, sans-serif;
+	float: left;
+	height: 275px;
+	width: 150px;
+	margin-top: 225px;
+	margin-right: 0px;
+	padding: 0px;
+	text-align: center;
+	background-repeat: no-repeat;
+	font-weight: bold;
+	margin-left: 20px;
+}
+.announcement {
+	font-family: Arial, Helvetica, sans-serif;
+	float: right;
+	height: 175px;
+	width: 270px;
+	margin-top: 300px;
+	margin-right: 30px;
+	padding: 15px;
+	text-align: center;
+	background-image: url(../images/eventbox.png);
+	background-repeat: no-repeat;
+	font-weight: bold;
+}
